--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: go
 
 go:
-  - 1.3
-  - 1.4
   - tip
+
+before_install:
+  - go get -v ./...
+  - go get -v github.com/axw/gocov/gocov
+  - go get -v github.com/mattn/goveralls
+  - go get -v golang.org/x/tools/cmd/cover
+
+script:
+  - goveralls -v -service travis-ci -repotoken $COVERALLS_TOKEN github.com/anupcshan/sqlgen/sqlgen
